# bookpricechecker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scrapper.py  settings.py
